# TernReader

./: .gitignore  Cargo.toml  README.md  make_full_flash.sh  run.sh  wokwi.toml
.github/workflows/: release.yml
core/: Cargo.toml  build.rs
core/src/: application.rs  build_info.rs  display.rs  framebuffer.rs  fs.rs  image_viewer.rs  input.rs  lib.rs  test_image.rs  trbk.rs
core/src/app/: book_reader.rs  home.rs  image_viewer.rs  mod.rs  settings.rs  system.rs
core/src/ui/: mod.rs  reader_view.rs  view.rs
desktop/: Cargo.toml
desktop/src/: display.rs  image_source.rs  main.rs
docs/: refactor_notes.md  serial.md  trbk-format.md
images/: Waitrose.trimg  gails.tri  waterst.tri
tools/tern-book/: Cargo.toml
tools/tern-book/src/: lib.rs  main.rs
tools/tern-epub/: Cargo.toml
tools/tern-epub/src/: lib.rs
tools/tern-image/: Cargo.toml
tools/tern-image/src/: lib.rs  main.rs
tools/trusty-book/: Cargo.toml  build.rs
tools/trusty-book/src/: lib.rs  main.rs
tools/trusty-epub/src/: lib.rs
tools/trusty-image/: Cargo.toml
tools/trusty-image/src/: lib.rs  main.rs  onnx_detector.rs
x4/: Cargo.toml  build.rs
x4/fatfs/: compat.c  ffconf.h
x4/src/: eink_display.rs  image_source.rs  input.rs  main.rs  sd_io.rs  sdspi_fatfs.rs  sdspi_fs.rs  usb_mode.rs
