[package]
name = "tern-book"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
log.workspace = true
tern-epub = { path = "../tern-epub" }
tern-image = { path = "../tern-image" }
thiserror = "2.0.12"
env_logger = "0.11.8"
fontdue = "0.9.3"
image = "0.25.9"

[build-dependencies]
time = { version = "0.3.36", features = ["formatting"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "tern-book"
path = "src/main.rs"
